--- a/Solar System 2/FirstExample/FirstExample.vcxproj
+++ b/Solar System 2/FirstExample/FirstExample.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="..\SOIL\src\SOIL.c" />
     <ClCompile Include="..\SOIL\src\stb_image_aug.c" />
     <ClCompile Include="LoadShaders.cpp" />
+    <ClCompile Include="Planet.cpp" />
     <ClCompile Include="Triangles.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -98,6 +99,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\..\Dropbox\oglpg-8th-edition\include\LoadShaders.h" />
+    <ClInclude Include="List.h" />
+    <ClInclude Include="Planet.h" />
     <ClInclude Include="vectors.h" />
   </ItemGroup>
   <ItemGroup>
